# mofa-engine

./: .gitignore  Cargo.toml  README.md  SKILL.md
crates/mofa-engine-app/: Cargo.toml
crates/mofa-engine-app/src/: main.rs
crates/mofa-engine-core/: Cargo.toml
crates/mofa-engine-core/src/: config.rs  discovery.rs  engine.rs  lib.rs  memory_manager.rs  preflight.rs  scheduler.rs
crates/mofa-engine-core/src/backends/: ollama.rs  openai.rs
crates/mofa-engine-sdk/: Cargo.toml
crates/mofa-engine-sdk/src/: lib.rs  server.rs
crates/mofa-kernel/: Cargo.toml
crates/mofa-kernel/src/: backend.rs  error.rs  lib.rs  memory.rs  scheduler.rs  types.rs
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: dashboard.spec.ts
mofa-engine-app/: Cargo.toml
mofa-engine-app/src/: main.rs
mofa-engine-core/: Cargo.toml
mofa-engine-core/src/: circuit_breaker.rs  config.rs  engine.rs  lib.rs  memory.rs  preflight.rs  router.rs
mofa-engine-core/src/backends/: mod.rs  ollama.rs  openai_compat.rs
mofa-engine-sdk/: Cargo.toml
mofa-engine-sdk/src/: dashboard.rs  lib.rs  server.rs
mofa-fm/: article_to_podcast.py  mofa_engine_sdk.py  mofa_sdk.py
mofa-kernel/: Cargo.toml
mofa-kernel/src/: error.rs  lib.rs  traits.rs  types.rs
tests/: e2e_test.py  integration_test.rs  test_all_providers.py  test_local_models.py
