[workspace]
resolver = "2"
members = [
    "crates/mofa-kernel",
    "crates/mofa-engine-core",
    "crates/mofa-engine-sdk",
    "crates/mofa-engine-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
mofa-kernel = { path = "crates/mofa-kernel" }
mofa-engine-core = { path = "crates/mofa-engine-core" }
mofa-engine-sdk = { path = "crates/mofa-engine-sdk" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
dashmap = "6"
parking_lot = "0.12"
bytes = "1"
base64 = "0.22"
toml = "0.8"
dirs = "6"
sysinfo = "0.34"
futures = "0.3"
tokio-stream = "0.1"
