[workspace]
resolver = "3"
members = [
    "mofa-kernel",
    "mofa-engine-core",
    "mofa-engine-sdk",
    "mofa-engine-app",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "multipart"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.34"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
dirs = "6"
tempfile = "3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Internal crates
mofa-kernel = { path = "mofa-kernel" }
mofa-engine-core = { path = "mofa-engine-core" }
mofa-engine-sdk = { path = "mofa-engine-sdk" }
