[package]
name = "mofa-engine-core"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Engine internals: providers, routing, memory, circuit breaker"

[dependencies]
mofa-kernel = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
