[package]
name = "mofa-kernel"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Trait definitions and core types for MoFA Engine"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
