[package]
name = "mofa-engine-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mofa-engine"
path = "src/main.rs"

[dependencies]
mofa-kernel = { workspace = true }
mofa-engine-core = { workspace = true }
mofa-engine-sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
