[package]
name = "mofa-engine-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
mofa-kernel = { workspace = true }
mofa-engine-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
